[package]
name = "mls"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
hex = "0.4"
base64 = "0.21"
bat = "0.22"

[dependencies.openmls]
version = "0.4"
git = "https://github.com/beltram/openmls"
branch = "debug"
package = "openmls"

[dependencies.openmls-d20]
package = "openmls"
version = "0.20"
git = "https://github.com/wireapp/openmls"
branch = "feat/d20"
